--- a/programs/linux/yarpStreamingControl/reciever/CMakeLists.txt
+++ b/programs/linux/yarpStreamingControl/reciever/CMakeLists.txt
@@ -1,9 +1,8 @@
-# YARP Streaming Controller: Receptor
-
+# yarpStreamingControl: Reciever
 cmake_minimum_required(VERSION 2.8)  # Versión mínima que exigimos de CMake, que va ampliando sus capacidades
-add_executable(receptor_controller main.cpp)  # Compilar main.cpp y other.cpp, enlazarlos, y llamar ejecutable al binario generado
+add_executable(yarpStreamingControlReciever main.cpp)  # Compilar main.cpp y other.cpp, enlazarlos, y llamar ejecutable al binario generado
 find_package(YARP REQUIRED)  # Nombre de la librería, buscará un módulo de CMake (que define las variables utilizadas a continuación) con este nombre. REQUIRED indica que lo exigimos.
 find_package(OpenCV REQUIRED)  # Nombre de la librería, buscará un módulo de CMake (que define las variables utilizadas a continuación) con este nombre. REQUIRED indica que lo exigimos.
-target_link_libraries(receptor_controller ${OpenCV_LIBS})
-target_link_libraries(receptor_controller ${YARP_LIBRARIES})
+target_link_libraries(yarpStreamingControlReciever ${OpenCV_LIBS})
+target_link_libraries(yarpStreamingControlReciever ${YARP_LIBRARIES})
 
